[package]
name = "serde_jcs"
version = "0.1.0"
authors = ["l1h3r <devin.turner09@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "JSON Canonicalization Scheme (JCS) for Serde"
repository = "https://github.com/l1h3r/serde_jcs"
keywords = ["json", "serde", "serialization"]
categories = ["encoding"]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
readme = "README.md"

[dependencies]
ryu-js = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std", "float_roundtrip"] }

[package.metadata.docs.rs]
all-features = true
